--- a/index.html
+++ b/index.html
@@ -11,46 +11,50 @@
 		<title>COMPANY_NAME</title>
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		  <div class="container-fluid">
-		    <a class="navbar-brand" href="#">COMPANY_LOGO</a>
-		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuContents" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		      <span class="navbar-toggler-icon"></span>
-		    </button>
-		    <div class="collapse navbar-collapse" id="menuContents">
-		      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-		        <li class="nav-item dropdown">
-		          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-		            企業情報
-		          </a>
-		          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-		            <li><a class="dropdown-item" href="#">会社概要</a></li>
-		            <li><a class="dropdown-item" href="#">沿革</a></li>
-					<li><hr class="dropdown-divider"></li>
-		            <li><a class="dropdown-item" href="#">社長挨拶</a></li>
-		            <li><a class="dropdown-item" href="#">企業理念</a></li>
-		            <li><hr class="dropdown-divider"></li>
-		            <li><a class="dropdown-item" href="#">ニュースリリース</a></li>
-		          </ul>
-		        </li>
-				<li class="nav-item">
-		          <a class="nav-link" href="#">求人情報</a>
-		        </li>
-		        <li class="nav-item">
-		          <a class="nav-link" href="#">プライバシーポリシー</a>
-		        </li>
-		      </ul>
-		      <form class="d-flex">
-		        <input class="form-control me-2" type="search" placeholder="サイト内検索" aria-label="サイト内検索">
-		        <button class="btn btn-outline-success" type="submit">
-		        	<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-  						<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-					</svg>
-				</button>
-		      </form>
-		    </div>
-		  </div>
-		</nav>
+		<div class="fixed-top">
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			  <div class="container-fluid">
+			    <a class="navbar-brand" href="#">COMPANY_LOGO</a>
+			    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuContents" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			      <span class="navbar-toggler-icon"></span>
+			    </button>
+			    <div class="collapse navbar-collapse" id="menuContents">
+			      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+			        <li class="nav-item dropdown">
+			          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+			            企業情報
+			          </a>
+			          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+			            <li><a class="dropdown-item" href="#">会社概要</a></li>
+			            <li><hr class="dropdown-divider"></li>
+			            <li><a class="dropdown-item" href="#">沿革</a></li>
+						<li><hr class="dropdown-divider"></li>
+			            <li><a class="dropdown-item" href="#">社長挨拶</a></li>
+			            <li><hr class="dropdown-divider"></li>
+			            <li><a class="dropdown-item" href="#">企業理念</a></li>
+			            <li><hr class="dropdown-divider"></li>
+			            <li><a class="dropdown-item" href="#">ニュースリリース</a></li>
+			          </ul>
+			        </li>
+					<li class="nav-item">
+			          <a class="nav-link" href="#">求人情報</a>
+			        </li>
+			        <li class="nav-item">
+			          <a class="nav-link" href="#">プライバシーポリシー</a>
+			        </li>
+			      </ul>
+			      <form class="d-flex">
+			        <input class="form-control me-2" type="search" placeholder="サイト内検索" aria-label="サイト内検索">
+			        <button class="btn btn-outline-success" type="submit">
+			        	<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+	  						<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+						</svg>
+					</button>
+			      </form>
+			    </div>
+			  </div>
+			</nav>
+		</div>
 
 		<div class="carousel slide" data-bs-ride="carousel" id="carouselExampleCaptions">
 		  <div class="carousel-indicators">
