--- a/overview.html
+++ b/overview.html
@@ -24,10 +24,10 @@
 			      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 			        <li class="nav-item dropdown">
 			          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-			            企業情報
+			            <u>企業情報</u>
 			          </a>
 			          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-			            <li><a class="dropdown-item" href="overview.html">会社概要</a></li>
+			            <li><a class="dropdown-item disabled" href="#">会社概要</a></li>
 			            <li><hr class="dropdown-divider"></li>
 			            <li><a class="dropdown-item" href="#">沿革</a></li>
 						<li><hr class="dropdown-divider"></li>
@@ -58,45 +58,6 @@
 			</nav>
 		</div>
 
-		<div class="carousel slide" data-bs-ride="carousel" id="topSlideShow">
-		  <div class="carousel-indicators">
-		    <button type="button" data-bs-target="#topSlideShow" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-		    <button type="button" data-bs-target="#topSlideShow" data-bs-slide-to="1" aria-label="Slide 2"></button>
-		    <button type="button" data-bs-target="#topSlideShow" data-bs-slide-to="2" aria-label="Slide 3"></button>
-		  </div>
-		  <div class="carousel-inner">
-		    <div class="carousel-item active">
-		      <img src="img/yokohama_view.jpg" height=500 class="d-block w-100" alt="...">
-		      <div class="carousel-caption d-none d-md-block">
-		        <h5>スライドＡ</h5>
-		        <p>コメントＡＡＡＡＡＡＡＡＡＡ</p>
-		      </div>
-		    </div>
-		    <div class="carousel-item">
-		      <img src="img/mm.jpg" height=500 class="d-block w-100" alt="...">
-		      <div class="carousel-caption d-none d-md-block">
-		        <h5>スライドＢ</h5>
-		        <p>コメントＢＢＢＢＢＢＢＢＢＢ</p>
-		      </div>
-		    </div>
-		    <div class="carousel-item">
-		      <img src="img/wp.jpg" height=500 class="d-block w-100" alt="...">
-		      <div class="carousel-caption d-none d-md-block">
-		        <h5>スライドＣ</h5>
-		        <p>コメントＣＣＣＣＣＣＣＣＣＣ</p>
-		      </div>
-		    </div>
-		  </div>
-		  <button class="carousel-control-prev" type="button" data-bs-target="#topSlideShow" data-bs-slide="prev">
-		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		    <span class="visually-hidden">Previous</span>
-		  </button>
-		  <button class="carousel-control-next" type="button" data-bs-target="#topSlideShow" data-bs-slide="next">
-		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		    <span class="visually-hidden">Next</span>
-		  </button>
-		</div>
-	
 	<!-- [[DO NOT MOVE OR CHANGE]] Include Bootstrap bandle -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	</body>
