--- a/overview.html
+++ b/overview.html
@@ -57,6 +57,13 @@
 			  </div>
 			</nav>
 		</div>
+		
+		<nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
+		  <ol class="breadcrumb">
+		    <li class="breadcrumb-item"><a href="./">HOME</a></li>
+		    <li class="breadcrumb-item active" aria-current="page">会社概要</li>
+		  </ol>
+		</nav>
 
 	<!-- [[DO NOT MOVE OR CHANGE]] Include Bootstrap bandle -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
