--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<div class="fixed-top" id="menuOutline">
-			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			<nav class="navbar navbar-expand-lg navbar-light bg-white">
 			  <div class="container-fluid">
 			    <a class="navbar-brand" href="./">COMPANY_LOGO</a>
 			    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menuContents" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,7 +29,7 @@
 			          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 			            <li><a class="dropdown-item" href="overview.html">会社概要</a></li>
 			            <li><hr class="dropdown-divider"></li>
-			            <li><a class="dropdown-item" href="#">沿革</a></li>
+			            <li><a class="dropdown-item" href="history.html">沿革</a></li>
 						<li><hr class="dropdown-divider"></li>
 			            <li><a class="dropdown-item" href="#">社長挨拶</a></li>
 			            <li><hr class="dropdown-divider"></li>
