--- a/history.html
+++ b/history.html
@@ -27,9 +27,9 @@
 			            <u>企業情報</u>
 			          </a>
 			          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-			            <li><a class="dropdown-item disabled" href="#">会社概要</a></li>
+			            <li><a class="dropdown-item" href="overview.html">会社概要</a></li>
 			            <li><hr class="dropdown-divider"></li>
-			            <li><a class="dropdown-item" href="history.html">沿革</a></li>
+			            <li><a class="dropdown-item disabled" href="#">沿革</a></li>
 						<li><hr class="dropdown-divider"></li>
 			            <li><a class="dropdown-item" href="#">社長挨拶</a></li>
 			            <li><hr class="dropdown-divider"></li>
@@ -61,57 +61,10 @@
 		<nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
 		  <ol class="breadcrumb bg-light">
 		    <li class="breadcrumb-item"><a href="./">HOME</a></li>
-		    <li class="breadcrumb-item active" aria-current="page">会社概要</li>
+		    <li class="breadcrumb-item active" aria-current="page">沿革</li>
 		  </ol>
 		</nav>
 		
-		<div class="card mx-auto" style="width: 40rem;">
-		  <img src="img/company.jpg" class="card-img-top" alt="...">
-		  <div class="card-body">
-		    <h4 class="card-title">会社概要</h4>
-		    <table class="table">
-		      <tbody>
-		    	<tr>
-		    		<td>社名</td>
-		    		<td>COMPANY_NAME</td>
-		    	</tr>
-		    	<tr>
-		    		<td>本社所在地</td>
-		    		<td>神奈川県横浜市</td>
-		    	</tr>
-		    	<tr>
-		    		<td>本社電話番号</td>
-		    		<td>045-000-0000</td>
-		    	</tr>
-		    	<tr>
-		    		<td>設立</td>
-		    		<td>2022年mm月dd日</td>
-		    	</tr>
-		    	<tr>
-		    		<td>資本金</td>
-		    		<td>xxx万円</td>
-		    	</tr>
-		    	<tr>
-		    		<td>代表取締役</td>
-		    		<td>松橋 広昭</td>
-		    	</tr>
-		    	<tr>
-		    		<td>従業員数</td>
-		    		<td>xx名</td>
-		    	</tr>
-		    	<tr>
-		    		<td>事業内容</td>
-		    		<td>人材派遣事業</td>
-		    	</tr>
-		    	<tr>
-		    		<td>許可番号</td>
-		    		<td>一般労働者派遣事業（般）00-000000</td>
-		    	</tr>
-		      </tbody>
-		    </table>
-		  </div>
-		</div>
-
 	<!-- [[DO NOT MOVE OR CHANGE]] Include Bootstrap bandle -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	</body>
