--- a/overview.html
+++ b/overview.html
@@ -31,18 +31,18 @@
 			            <li><hr class="dropdown-divider"></li>
 			            <li><a class="dropdown-item" href="history.html">沿革</a></li>
 						<li><hr class="dropdown-divider"></li>
-			            <li><a class="dropdown-item" href="#">社長挨拶</a></li>
+			            <li><a class="dropdown-item" href="message.html">社長挨拶</a></li>
 			            <li><hr class="dropdown-divider"></li>
-			            <li><a class="dropdown-item" href="#">企業理念</a></li>
+			            <li><a class="dropdown-item" href="philosophy.html">企業理念</a></li>
 			            <li><hr class="dropdown-divider"></li>
-			            <li><a class="dropdown-item" href="#">ニュースリリース</a></li>
+			            <li><a class="dropdown-item" href="news.html">ニュースリリース</a></li>
 			          </ul>
 			        </li>
 					<li class="nav-item">
-			          <a class="nav-link" href="#">求人情報</a>
+			          <a class="nav-link" href="recruit.html">求人情報</a>
 			        </li>
 			        <li class="nav-item">
-			          <a class="nav-link" href="#">プライバシーポリシー</a>
+			          <a class="nav-link" href="privacy.html">プライバシーポリシー</a>
 			        </li>
 			      </ul>
 			      <form class="d-flex">
