--- a/news.html
+++ b/news.html
@@ -31,11 +31,11 @@
 			            <li><hr class="dropdown-divider"></li>
 			            <li><a class="dropdown-item" href="history.html">沿革</a></li>
 						<li><hr class="dropdown-divider"></li>
-			            <li><a class="dropdown-item disabled" href="#">社長挨拶</a></li>
+			            <li><a class="dropdown-item" href="#">社長挨拶</a></li>
 			            <li><hr class="dropdown-divider"></li>
 			            <li><a class="dropdown-item" href="philosophy.html">企業理念</a></li>
 			            <li><hr class="dropdown-divider"></li>
-			            <li><a class="dropdown-item" href="news.html">ニュースリリース</a></li>
+			            <li><a class="dropdown-item disabled" href="news.html">ニュースリリース</a></li>
 			          </ul>
 			        </li>
 					<li class="nav-item">
