--- a/privacy.html
+++ b/privacy.html
@@ -42,7 +42,7 @@
 			          <a class="nav-link" href="recruit.html">求人情報</a>
 			        </li>
 			        <li class="nav-item">
-			          <a class="nav-link disabled" href="#">プライバシーポリシー</a>
+					<a class="nav-link disabled" href="#"><u>プライバシーポリシー</u></a>
 			        </li>
 			      </ul>
 			      <form class="d-flex">
