--- a/recruit.html
+++ b/recruit.html
@@ -39,7 +39,7 @@
 			          </ul>
 			        </li>
 					<li class="nav-item">
-			          <a class="nav-link disabled" href="#">求人情報</a>
+						<a class="nav-link disabled" href="#"><u>求人情報</u></a>
 			        </li>
 			        <li class="nav-item">
 			          <a class="nav-link" href="privacy.html">プライバシーポリシー</a>
